--- a/css/courses.css
+++ b/css/courses.css
@@ -26,6 +26,17 @@
   border-radius: 50%;
   border: 5px solid var(--hover-color);
 }
+.contents .content .boxs .course .profile-photo .user i {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+  background-color: black;
+  box-shadow: 0 2px 10px black;
+}
 
 .contents .content .boxs .course .details {
   padding: 20px;
